--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,4 +1,4 @@
-<form action="/posts/new" method="post">
+<form action="/posts" method="post">
     <h2> Post Name: <input type="text" name="name"> </h2>
     <h2> Post Content </h2>
     <textarea name="content"></textarea>
