--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,4 @@
-<% Post.all.each do |post| %>
+<% @posts.each do |post| %>
     <p> Post Name: <%= post.name %> </p>
+    <p> Post Content: <%= post.content %> </p>
 <% end %>
