--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -1,6 +1,6 @@
 <form action="/posts" method="post">
     <h2> Post Name: <input type="text" name="name" id="name"> </h2>
     <h2> Post Content </h2>
-    <textarea name="content"></textarea>
+    <textarea name="content" id="content"></textarea>
     <input type="submit" id="submit">
 </form>
