--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -2,5 +2,5 @@
     <h2> Post Name: <input type="text" name="name" id="name"> </h2>
     <h2> Post Content </h2>
     <textarea name="content" id="content"></textarea>
-    <input type="submit" id="submit">
+    <input type=submit id="submit">
 </form>
