--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -1,5 +1,6 @@
 <form action="/posts/<%= @post.id %>" method="post">
     <input id="hidden" type="hidden" name="_method" value="patch">
-    <input type="text" ...>
+    <h1> Name: <input type="text" name="name"></h1>
+    <h2>Content: <input type="text" name="content"></h2>
     <input type="submit" id="submit">
 </form>
