--- a/app/views/edit.erb
+++ b/app/views/edit.erb
@@ -8,7 +8,7 @@
    <br><br>
 
    <label for id="name">Content:</label><br>
-   <textarea rows="20" cols="50" name="content" id="content" <%=@post.content%> ></textarea><br><br>
+   <textarea rows="20" cols="50" name="content" id="content" value="<%=@post.content%>" ></textarea><br><br>
 
    <input type=submit id="submit" value="Submit">
  </form>
