automatically backed up by learn

--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -1,5 +1,5 @@
 
-<input action="/posts/<%= @post.id %>/delete" method="delete">
+<input action="/posts/<%= @post.id %>/delete" method="post">
     <h1>Post Name: <%= @post.name %></h1>
     <h2> Post: <%= @post.content %></h2>
     <input type="delete" id="delete" value="Delete">
