--- a/app/views/show.erb
+++ b/app/views/show.erb
@@ -2,6 +2,6 @@
 <h2> Post: <%= @post.content %></h2>
 
 <form action="/posts/<%= @post.id %>/delete" method="post">
-    <input name="_method" value="delete">
+    <input id="hidden" type="hidden" name="_method" value="delete">
     <input type="submit" id="submit" value="delete">
 </form>
